# prole-search-rust-project

./: .gitignore  Cargo.toml
src/: main.rs
src/cmd/: index.rs  indexed_store.rs  init.rs  mod.rs  search.rs
src/ingest/: mod.rs  pdf.rs  text.rs
src/search/: mod.rs  open.rs  schema.rs
src/utils/: fsx.rs  logging.rs  mod.rs
