[package]
name = "ProleSearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tantivy = "0.22"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
pdf-extract = "0.10"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
serde = "1.0.228"
serde_json = "1.0.145"